--- a/trunk/CSOF5204 Arquitectura de Software/workspace/ASHWebModule/web/template.xhtml
+++ b/trunk/CSOF5204 Arquitectura de Software/workspace/ASHWebModule/web/template.xhtml
@@ -6,16 +6,26 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
-<h:outputStylesheet name="css/jsfcrud.css"/>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
-    
+
     <h:body>
-        <h1>
-            <ui:insert name="title">Default Title</ui:insert>
-        </h1>
+
+        <h:panelGrid id="encabezado" style="width:100%;text-align:left" columns="2">
+            <h:outputLabel id="lblReport" style="color:coral;font-size:25px">
+                <h1>
+                    <ui:insert name="title">Default Title</ui:insert>
+                </h1>
+            </h:outputLabel>
+            <h:panelGrid id="pglogo" style="width:100%;text-align:right;">
+                <h:graphicImage id="logo" url="/resources/ingenium-logo.png" />
+                <h:form><h:commandLink action="#{Login.logout}" value="#{Login.person.name}" /></h:form>
+            </h:panelGrid>
+        </h:panelGrid>
+
         <p>
             <ui:insert name="body">Default Body</ui:insert>
         </p>
     </h:body>
-    
+
 </html>
